# Auto_kuttan

./: .gitignore  README.md  SETUP.md  vercel.json
backend/: .gitignore  DEPLOYMENT.md  RENDER_SETUP.md  pyproject.toml  render.yaml  requirements.txt  server.py
backend/mcp_server/: agent.py  mcp_drive.py  organizer.py
backend/mcp_server/mcp_server_helper/: create_token.py
frontend/: README.md  package-lock.json  package.json  tsconfig.json
frontend/.astro/: settings.json
frontend/src/components/: ChatPage.tsx  CheckeredBackground.tsx  ColorChangingTitle.tsx  LoginPage.tsx
frontend/src/layouts/: Layout.astro
frontend/src/pages/: chat.astro  index.astro
frontend/src/styles/: global.css
